--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -49,7 +49,7 @@ jobs:
       # Build the Docker image
       - name: Build with Docker
         run: |
-          docker login -u "$DOCKER_LOGIN" -p "$DOCKER_PASSWORD"
+          docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
           docker build -t "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":"$GITHUB_SHA" \
             --build-arg GITHUB_SHA="$GITHUB_SHA" \
             --build-arg GITHUB_REF="$GITHUB_REF" .
