--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -45,11 +45,15 @@ jobs:
       #     ibmcloud login --apikey "${IBM_CLOUD_API_KEY}" -r "${IBM_CLOUD_REGION}" -g default
       #     ibmcloud cr region-set "${IBM_CLOUD_REGION}"
       #     ibmcloud cr login
-
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: $DOCKER_LOGIN
+          password: $DOCKER_PASSWORD
       # Build the Docker image
       - name: Build with Docker
         run: |
-          docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
+          #docker login -u $DOCKER_LOGIN -p $DOCKER_PASSWORD
           docker build -t "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":"$GITHUB_SHA" \
             --build-arg GITHUB_SHA="$GITHUB_SHA" \
             --build-arg GITHUB_REF="$GITHUB_REF" .
