--- a/.github/workflows/k8s.yaml
+++ b/.github/workflows/k8s.yaml
@@ -11,8 +11,8 @@ env:
   GITHUB_SHA: ${{ github.sha }}
   #IBM_CLOUD_API_KEY: ${{ secrets.IBM_CLOUD_API_KEY }}
   #IBM_CLOUD_REGION: us-south
-  DOCKER_LOGIN: ${{ secrets.DOCKER_LOGIN }}
-  DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+  # DOCKER_LOGIN: ${{ secrets.DOCKER_LOGIN }}
+  # DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
   #ICR_NAMESPACE: ${{ secrets.ICR_NAMESPACE }}
   REGISTRY_HOSTNAME: slackbr
   IMAGE_NAME: action-demo
@@ -51,21 +51,28 @@ jobs:
       #     username: $DOCKER_LOGIN
       #     password: $DOCKER_PASSWORD
       - name: Login to Docker Hub
+        env:
+          DOCKER_LOGIN: ${{ secrets.DOCKER_LOGIN }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
           echo $DOCKER_PASSWORD | docker login -u $DOCKER_LOGIN --password-stdin
-          
+
+      - name: Set Github Short SHA
+        run: |
+          GITHUB_SHORT_SHA=$(echo "$GITHUB_SHA"|cut -c-5)
+          export GITHUB_SHORT_SHA
       # Build the Docker image
       - name: Build with Docker
         run: |
           
-          docker build -t "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":"$GITHUB_SHA" \
+          docker build -t "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":"$GITHUB_SHORT_SHA" \
             --build-arg GITHUB_SHA="$GITHUB_SHA" \
             --build-arg GITHUB_REF="$GITHUB_REF" .
 
       # Push the image to Container Registry
       - name: Push the image to ICR
         run: |
-          docker push $REGISTRY_HOSTNAME/$IMAGE_NAME:$GITHUB_SHA
+          docker push $REGISTRY_HOSTNAME/$IMAGE_NAME:$GITHUB_SHORT_SHA
     
   # Deploy the Docker image to the IKS cluster
       # - name: Deploy to IKS
