--- a/.github/workflows/k8s_environments.yaml
+++ b/.github/workflows/k8s_environments.yaml
@@ -4,52 +4,26 @@ on:
   push:
     branches:
       - dev
+
   workflow_dispatch:
 
 # Environment variables available to all jobs and steps in this workflow
 env:
   GITHUB_SHA: ${{ github.sha }}
-  #IBM_CLOUD_API_KEY: ${{ secrets.IBM_CLOUD_API_KEY }}
-  #IBM_CLOUD_REGION: us-south
-  # DOCKER_LOGIN: ${{ secrets.DOCKER_LOGIN }}
-  # DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-  #ICR_NAMESPACE: ${{ secrets.ICR_NAMESPACE }}
+  
   REGISTRY_HOSTNAME: slackbr
   IMAGE_NAME: action-demo
-  #IKS_CLUSTER: bq1sm2gd0sjtps7ajoa0 # name or id of cluster
-  #DEPLOYMENT_NAME: hello-python
-  #PORT: 5001
 
 jobs:
 
-  setup-build-publish-deploy:
-      name: Setup, Build, Publish, and Deploy
+    build:
+      name: Build Container
       runs-on: ubuntu-latest
       steps:
 
       - name: Checkout
         uses: actions/checkout@v2
 
-      # Download and Install IBM Cloud CLI
-      # - name: Install IBM Cloud CLI
-      #   run: |
-      #     curl -fsSL https://clis.cloud.ibm.com/install/linux | sh
-      #     ibmcloud --version
-      #     ibmcloud config --check-version=false
-      #     ibmcloud plugin install -f kubernetes-service
-      #     ibmcloud plugin install -f container-registry
-
-      # Authenticate with IBM Cloud CLI
-      # - name: Authenticate with IBM Cloud CLI
-      #   run: |
-      #     ibmcloud login --apikey "${IBM_CLOUD_API_KEY}" -r "${IBM_CLOUD_REGION}" -g default
-      #     ibmcloud cr region-set "${IBM_CLOUD_REGION}"
-      #     ibmcloud cr login
-      # - name: Login to Docker Hub
-      #   uses: docker/login-action@v1
-      #   with:
-      #     username: $DOCKER_LOGIN
-      #     password: $DOCKER_PASSWORD
       - name: Login to Docker Hub
         env:
           DOCKER_LOGIN: ${{ secrets.DOCKER_LOGIN }}
@@ -64,7 +38,6 @@ jobs:
           echo $GITHUB_SHORT_SHA
       # Build the Docker image
       - name: Build with Docker
-        
         run: |
           echo $GITHUB_SHORT_SHA
           docker build -t "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":"$GITHUB_SHORT_SHA" \
@@ -72,10 +45,39 @@ jobs:
             --build-arg GITHUB_REF="$GITHUB_REF" .
 
       # Push the image to Container Registry
-      - name: Push the image to ICR
+      - name: Push the image to Docker Hub
         run: |
           docker push $REGISTRY_HOSTNAME/$IMAGE_NAME:$GITHUB_SHORT_SHA
-    
+
+    # deploy dev
+    deploy-dev:
+      name: Deploy dev
+      runs-on: ubuntu-latest
+      environment:
+        name: dev
+        url: "http://dev.teste.teste"
+      needs: build
+
+      steps:
+        - name: Run dev deployment 
+          run: |
+            echo "Deploy DEV"
+            env
+
+    # deploy hml
+    deploy-hml:
+      name: Deploy hml
+      runs-on: ubuntu-latest
+      environment:
+        name: hml
+        url: "http://hml.teste.teste"
+      needs: deploy-dev
+
+      steps:
+        - name: Run hml deployment 
+          run: |
+            echo "Deploy HML"
+            env
   # Deploy the Docker image to the IKS cluster
       # - name: Deploy to IKS
       #   run: |
