--- a/.github/workflows/k8s_environments.yaml
+++ b/.github/workflows/k8s_environments.yaml
@@ -39,15 +39,15 @@ jobs:
       # Build the Docker image
       - name: Build with Docker
         run: |
-          echo $GITHUB_SHORT_SHA
-          docker build -t "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":"$GITHUB_SHORT_SHA" \
+          #echo $GITHUB_SHORT_SHA
+          docker build -t "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":"$$GITHUB_SHA" \
             --build-arg GITHUB_SHA="$GITHUB_SHA" \
             --build-arg GITHUB_REF="$GITHUB_REF" .
 
       # Push the image to Container Registry
       - name: Push the image to Docker Hub
         run: |
-          docker push $REGISTRY_HOSTNAME/$IMAGE_NAME:$GITHUB_SHORT_SHA
+          docker push $REGISTRY_HOSTNAME/$IMAGE_NAME:$GITHUB_SHA
 
     # deploy dev
     deploy-dev:
