--- a/.github/workflows/k8s_environments.yaml
+++ b/.github/workflows/k8s_environments.yaml
@@ -40,14 +40,14 @@ jobs:
       - name: Build with Docker
         run: |
           #echo $GITHUB_SHORT_SHA
-          docker build -t "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":"$$GITHUB_SHA" \
+          docker build -t "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":"$GITHUB_SHA" \
             --build-arg GITHUB_SHA="$GITHUB_SHA" \
             --build-arg GITHUB_REF="$GITHUB_REF" .
 
       # Push the image to Container Registry
       - name: Push the image to Docker Hub
         run: |
-          docker push $REGISTRY_HOSTNAME/$IMAGE_NAME:$GITHUB_SHA
+          docker push "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":"$GITHUB_SHA"
 
     # deploy dev
     deploy-dev:
