--- a/.github/workflows/k8s_environments.yaml
+++ b/.github/workflows/k8s_environments.yaml
@@ -21,7 +21,7 @@ jobs:
       runs-on: ubuntu-latest
       steps:
 
-      - name: Checkout
+      - name: Checkout Repository
         uses: actions/checkout@v2
 
       - name: Login to Docker Hub
@@ -36,19 +36,20 @@ jobs:
           GITHUB_SHORT_SHA=$(echo "$GITHUB_SHA"|cut -c-5)
           export GITHUB_SHORT_SHA
           echo $GITHUB_SHORT_SHA
+      
       # Build the Docker image
-      - name: Build with Docker
+      - name: Build Docker image
         run: |
           #echo $GITHUB_SHORT_SHA
-          docker build -t "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":"$GITHUB_SHA" \
+          docker build --file Dockerfile -t "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":"$GITHUB_SHA" \
             --build-arg GITHUB_SHA="$GITHUB_SHA" \
             --build-arg GITHUB_REF="$GITHUB_REF" .
-
+          docker tag "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":"$GITHUB_SHA" "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":latest
       # Push the image to Container Registry
-      - name: Push the image to Docker Hub
+      - name: Push the image to Docker container registry
         run: |
           docker push "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":"$GITHUB_SHA"
-
+          docker push "$REGISTRY_HOSTNAME"/"$IMAGE_NAME":latest
     # deploy dev
     deploy-dev:
       name: Deploy dev
