--- a/.github/workflows/k8s_environments.yaml
+++ b/.github/workflows/k8s_environments.yaml
@@ -79,7 +79,7 @@ jobs:
         - name: Run hml deployment 
           run: |
             echo "Deploy HML"
-            echo ${{hml.DB_HOST}}
+            echo ${{environment.name.DB_HOST}}
   # Deploy the Docker image to the IKS cluster
       # - name: Deploy to IKS
       #   run: |
