--- a/.github/workflows/k8s_environments.yaml
+++ b/.github/workflows/k8s_environments.yaml
@@ -126,33 +126,33 @@ jobs:
           name: dev-k8s
         needs: [ devKubernets, devSecrets ]
 
-        env:
-          SECRETS_CONTEXT: ${{ toJson(secrets) }}
-          container_tag: "$GITHUB_SHA"
-
         steps:
           
           - name: Checkout Ansible Repo
             uses: actions/checkout@v2
             with:
               repository: 'julianoslackbr/ansible-kubernetes'
-              
-          - name: Create Kubernets vars
-            run: |
 
-              echo $SECRETS_CONTEXT > kubernetes.json
-              cat kubernetes.json
+          - uses: actions/download-artifact@master
+            with:
+              name: kubernetes-vars-file
+              path: kubernetes-vars-file.yaml   
+
+          - uses: actions/download-artifact@master
+            with:
+              name: secret-vars-file
+              path: secret-vars-file.yaml   
+              
+          - name: Create Manifests
+            run: |
 
               pip3 install pip --upgrade
               pip3 install kubernetes==11.0.0 openshift==0.11.0
               pip3 install ansible==2.9
-              ansible-playbook sample-playbook-createvars.yml
-              cat kubernetes-vars-file.yaml
-
-          - uses: actions/upload-artifact@master
-            with:
-              name: kubernetes-vars-file
-              path: kubernetes-vars-file.yaml      
+              ansible-playbook sample-playbook-k8s.yml
+              
+              cat ./k8s/*
+   
 
     # # deploy hml
     # hml:
