--- a/.github/workflows/k8s_environments.yaml
+++ b/.github/workflows/k8s_environments.yaml
@@ -141,7 +141,10 @@ jobs:
           - uses: actions/download-artifact@master
             with:
               name: secret-vars-file
-              path: secret-vars-file.yaml   
+              path: secret-vars-file.yaml
+          
+          - name: list files
+            run: ls -alt
               
           - name: Create Manifests
             run: |
