--- a/.github/workflows/k8s_environments.yaml
+++ b/.github/workflows/k8s_environments.yaml
@@ -11,7 +11,8 @@ jobs:
 
     CI:
       name: Build container
-      runs-on: ubuntu-latest
+      #runs-on: ubuntu-latest
+      run-on: self-hosted 
       environment:
         name: ci
       env:
