--- a/.github/workflows/k8s_environments.yaml
+++ b/.github/workflows/k8s_environments.yaml
@@ -12,7 +12,7 @@ jobs:
     CI:
       name: Build container
       #runs-on: ubuntu-latest
-      run-on: self-hosted 
+      runs-on: self-hosted 
       environment:
         name: ci
       env:
