--- a/.github/workflows/k8s_environments.yaml
+++ b/.github/workflows/k8s_environments.yaml
@@ -52,7 +52,8 @@ jobs:
 
     CDDEV:
         name: Dev Deployment
-        runs-on: ubuntu-latest
+        #runs-on: ubuntu-latest
+        runs-on: self-hosted
         environment:
           name: dev
         needs: CI
