--- a/.github/workflows/k8s_environments.yaml
+++ b/.github/workflows/k8s_environments.yaml
@@ -65,14 +65,12 @@ jobs:
           - name: Configure kubeconfig
             uses: azure/k8s-set-context@v1
             with:
-              method: service-account
-              k8s-url: ${{ env.K8S_URL }}
-              k8s-secret: ${{ env.K8S_SECRET }}
+              method: kubeconfig
+              kubeconfig: ${{ env.K8S_KUBECONFIG }}
               cluster-type: generic
-            id: setcontext
             env:
-              K8S_URL: ${{secrets.K8S_CLUSTER_URL}}
-              K8S_SECRET: ${{secrets.K8S_CLUSTER_SECRET}}
+              K8S_KUBECONFIG: ${{secrets.K8S_KUBECONFIG}}
+              
                 
           - name: Checkout Ansible Repo
             uses: actions/checkout@v2
