--- a/.github/workflows/k8s_environments.yaml
+++ b/.github/workflows/k8s_environments.yaml
@@ -25,11 +25,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Docker hub login
+        run: |
+          echo $DOCKER_PASSWORD | docker login -u $DOCKER_LOGIN --password-stdin
         env:
           DOCKER_LOGIN: ${{ secrets.DOCKER_LOGIN }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: |
-          echo $DOCKER_PASSWORD | docker login -u $DOCKER_LOGIN --password-stdin
 
       - name: Set Github Short SHA
         run: |
@@ -59,7 +59,6 @@ jobs:
         needs: CI
         env:
           SECRETS_CONTEXT: ${{ toJson(secrets) }}
-
         
         steps:
           - name: Configure kubeconfig
@@ -67,11 +66,10 @@ jobs:
             with:
               method: kubeconfig
               kubeconfig: ${{ env.K8S_KUBECONFIG }}
-              cluster-type: generic
+              #cluster-type: generic
             env:
               K8S_KUBECONFIG: ${{secrets.K8S_KUBECONFIG}}
               
-                
           - name: Checkout Ansible Repo
             uses: actions/checkout@v2
             with:
@@ -88,17 +86,24 @@ jobs:
             env:
               TAG: ${{ github.sha }}
 
-          - name: List files
-            run: |
-              ls -alt
-              echo "-----"
-              cat secrets-vars-file.yaml 
-              echo echo "-----"
-              cat kubernetes-vars-file.yaml
-          
           - name: Create kubernets manifests and deploy
+            run: ansible-playbook sample-playbook-k8s.yml -v --skip-tags=apply
+
+          - name: Install kubeval test tool
             run: |
-              ansible-playbook sample-playbook-k8s.yml -vvv
+              curl -LO https://github.com/instrumenta/kubeval/releases/latest/download/kubeval-linux-amd64.tar.gz
+              tar xf kubeval-linux-amd64.tar.gz -C /usr/local/bin/
+              chmod +x /usr/local/bin/kubeval
+
+          - name: Running kubeval test tool
+            run: |
+              for files in $(find ./k8s -type f); do
+                kubeval $files
+                test $? -ne 0 && exit 1
+              do
+
+          - name: Create kubernets manifests and deploy
+            run: ansible-playbook sample-playbook-k8s.yml -v --tags=apply
               
               
     # # deploy hml
