--- a/.github/workflows/k8s_environments.yaml
+++ b/.github/workflows/k8s_environments.yaml
@@ -101,39 +101,7 @@ jobs:
               for files in $(find ./k8s -type f); do
                 kubeval $files
                 test $? -ne 0 && exit 1
-              do
+              end
 
           - name: Create kubernets manifests and deploy
             run: ansible-playbook sample-playbook-k8s.yml -v --tags=apply
-              
-              
-    # # deploy hml
-    # hml:
-    #   name: Hml Variables
-    #   runs-on: ubuntu-latest
-    #   environment:
-    #     name: hml
-    #     url: "http://hml.teste.teste"
-    #   needs: deploy-dev
-
-    #   steps:
-    #     - name: Run hml deployment 
-    #       run: |
-    #         echo "Deploy HML"
-    #         echo ${{ secrets.DB_HOST }} > file.txt
-    #         cat file.txt
-    #         printenv
-    #         echo "-------"
-    #         ls -al
-            
-  # Deploy the Docker image to the IKS cluster
-      # - name: Deploy to IKS
-      #   run: |
-      #     ibmcloud ks cluster config --cluster $IKS_CLUSTER
-      #     kubectl config current-context
-      #     kubectl create deployment $DEPLOYMENT_NAME --image=$REGISTRY_HOSTNAME/$ICR_NAMESPACE/$IMAGE_NAME:$GITHUB_SHA --dry-run -o yaml > deployment.yaml
-      #     kubectl apply -f deployment.yaml
-      #     kubectl rollout status deployment/$DEPLOYMENT_NAME
-      #     kubectl create service loadbalancer $DEPLOYMENT_NAME --tcp=80:$PORT --dry-run -o yaml > service.yaml
-      #     kubectl apply -f service.yaml
-      #     kubectl get services -o wide
