--- a/.github/workflows/k8s_environments.yaml
+++ b/.github/workflows/k8s_environments.yaml
@@ -11,8 +11,8 @@ jobs:
 
     CI:
       name: Build container
-      #runs-on: ubuntu-latest
-      runs-on: self-hosted 
+      runs-on: ubuntu-latest
+      #runs-on: self-hosted 
       environment:
         name: ci
       env:
@@ -52,8 +52,8 @@ jobs:
 
     CDDEV:
         name: Dev Deployment
-        #runs-on: ubuntu-latest
-        runs-on: self-hosted
+        runs-on: ubuntu-latest
+        #runs-on: self-hosted
         environment:
           name: dev
         needs: CI
