--- a/.github/workflows/k8s_environments.yaml
+++ b/.github/workflows/k8s_environments.yaml
@@ -87,7 +87,7 @@ jobs:
               TAG: ${{ github.sha }}
 
           - name: Create kubernets manifests and deploy
-            run: ansible-playbook sample-playbook-k8s.yml -v --skip-tags=apply
+            run: ansible-playbook sample-playbook-k8s.yml -v 
 
           - name: Install kubeval test tool
             run: |
@@ -103,4 +103,4 @@ jobs:
               done
 
           - name: Create kubernets manifests and deploy
-            run: ansible-playbook sample-playbook-k8s.yml -v --tags=apply
+            run: ansible-playbook sample-playbook-k8s.yml -v --extra-vars "deployment=true"
